kubernetes/apps/aurral/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: aurral
  namespace: aurral
  annotations:
    external-dns.kubernetes.io/target: <path:cloudflared:tunnel-config#tunnel-target>
    external-dns.kubernetes.io/cloudflare-proxied: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`aurral.<path:cert-manager:domain-config#domain>`)
      kind: Rule
      services:
        - name: aurral
          port: 3001
  tls: {}
